# FlacFileManager

./: CMakeLists.txt  FileManager.cpp  FlacFileFunctions.cpp  FlacFileFunctions.h  LICENSE  README.md
test/: CMakeLists.txt  Menu.h  Playlist.cpp  Playlist.h  TestFile.cpp
